# self-hosted-paas

./: .gitignore  Cargo.toml  dockyard.service
src/: error.rs  main.rs  utils.rs
src/cli/: commands.rs  deploy.rs  display.rs  mod.rs  projects.rs  settings.rs
src/config/: global.rs  mod.rs  paths.rs  project.rs
src/daemon/: container.rs  mod.rs  proxy.rs  scheduler.rs  server.rs  tunnel.rs  watcher.rs  webhook.rs
src/docker/: build.rs  client.rs  mod.rs  network.rs
src/ipc/: client.rs  handlers.rs  mod.rs  protocol.rs
src/models/: events.rs  mod.rs  project.rs
