[package]
name = "dockyard"
version = "0.1.0"
edition = "2021"
description = "Self-hosted PaaS - Deploy and manage Docker containers from your terminal"

[[bin]]
name = "dockyard"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# HTTP / Server
axum = "0.7"
tower = "0.4"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "client-legacy"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }

# Docker
bollard = "0.17"
futures-util = "0.3"
tar = "0.4"

# Security
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# System
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"
